// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propToStyle() when receives an orgument with  breakpoints renders only one breakpoint resolution 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
]
`;

exports[`propToStyle() when receives an orgument with  breakpoints renders two or more breakpoint resolution 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "768",
    "px){",
    "text-align: right;",
    "}",
  ],
]
`;
